--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -61,7 +61,7 @@ jobs:
 
       - name: Deploy HTML to EC2
         run: |
-          scp -o StrictHostKeyChecking=no -i -ddg-dl-temp index.html ec2-user@${{ env.PUBLIC_IP }}:/tmp/index.html
+          scp -o StrictHostKeyChecking=no -i ddg-dl-temp index.html ec2-user@${{ env.PUBLIC_IP }}:/tmp/index.html
           ssh -o StrictHostKeyChecking=no -i ddg-dl-temp ec2-user@${{ env.PUBLIC_IP }} << 'EOF'
             sudo yum update -y
             sudo yum install -y httpd
